B-F Backup Sandbox 30.4.12/src/objects/B_F_Contact__c.object
<CustomObject>
    <description>FDC-GD: Junction object used to associate B-F Contacts across multiple Accounts and Field Offices.
NPA Rollout: Used to store Account-User relationship.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-GD: Used by Global Directory application.
NPA Rollout: Used to refer to shipto.</description>
        <inlineHelpText>Select Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>B-F Contacts</relationshipLabel>
        <relationshipName>B_F_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Global Directory application: Related BF/Contact
NPA Rollout: Used to refer to User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>B_F_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>B-F Contact</label>
    <listViews>
        <fullName>All_B_F_Contacts</fullName>
        <columns>User__c</columns>
        <columns>Account__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All B-F Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>FDC-GD Managers</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>B-F {0000}</displayFormat>
        <label>B-F Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B-F Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>